// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Overlay Dark 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <p
      class="sc-AxhCb hpmHVQ"
      color="currentColor"
      font-size="16px"
    >
      Background content
    </p>
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm sc-fzomME cbDcKb"
    >
      <div
        class="Box-sc-1qu1edy-0 sc-fznWOq ELElF"
      >
        <p
          class="sc-AxhCb hpmHVQ"
          color="currentColor"
          font-size="16px"
        >
          Overlay content
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Overlay Light (default) 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <p
      class="sc-AxhCb hpmHVQ"
      color="currentColor"
      font-size="16px"
    >
      Background content
    </p>
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm sc-fzomME iwOstw"
    >
      Overlay content
    </div>
  </div>
</div>
`;
